@@ -906,6 +906,7 @@ HTML_TRANSLATE_HREF=href (URL of &links)
 HTML_TRANSLATE_SRC=src (URL of &images)
 HTML_TRANSLATE_LANG=lan&g (language attribute)
 HTML_TRANSLATE_HREFLANG=h&reflang (language of links)
+HTML_TRANSLATE_VALUE=&value (of form input)
 
 HTML_PARAGRAPH_ON=Start a new paragraph on:
 HTML_PARAGRAPH_ON_BR=<&br> (breaks)
